--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Escuela de Danza</title>
 	<link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Montserrat:400,700'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/grid-system.css">
 	<link rel="stylesheet" type="text/css" href="css/utilities.css">
 	<link rel="stylesheet" type="text/css" href="css/common.css">
@@ -13,34 +14,45 @@
 </head>
 <body>
 	<header>
-    <div class="container">
-        <div class="row">
-            <div id="nav" class="col-12">
-            	<h5 class="text-blue" >ESCUELA DE DANZA</h5>
-                 <ul>
-                     <li><a href="#">Nosotros</a></li>
-                     <li><a href="#">Clases</a></li>
-                     <li><a href="#">Blog</a></li>
-                     <li><a href="#">Contáctanos</a></li>
-                 </ul>
+        <div class="container">
+            <div class="row">
+                <div id="nav" class="col-12">
+                	<h5 class="text-blue" >ESCUELA DE DANZA</h5>
+                     <ul>
+                         <li><a href="#">Nosotros</a></li>
+                         <li><a href="#">Clases</a></li>
+                         <li><a href="#">Blog</a></li>
+                         <li><a href="#">Contáctanos</a></li>
+                     </ul>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="dance1">
-    	<div class="row">
-	    	<div class="col-3 studio" >
-	    		<h5>STUDIO</h5>
-	    		<p>Julliart Studios is the perfect<br>
-	    		 place to find feet with over 20 <br>
-	    		 unique styles of dance and 80<br>
-	    		 teachers to choose from</p>
-	    		 <a href="#">Inscribete</a>
-	    	</div>
-	    </div>	
-    </div>
     </header>
+        <div class="dance1">
+            <div class="container">
+                <div class="col-3 " >
+                    <h5>STUDIO</h5>
+                    <p>Julliart Studios is the perfect place <br>
+                     to find feet with over 20<br>
+                     unique styles of dance and 80<br>
+                     teachers to choose from</p>
+                     <a href="#">Inscribete</a>
+                </div>
+            </div>
+        </div>
 	<footer>
-		
+        <div class="textura2">
+            <div class="container">
+                <div class="row">
+                    <div class="col-8 eight " >
+                        <p>Julliart Scuenta con una amplia trayectoria y reputación, brindando
+                        una formación de excelencia a cientos de amantes de danza</p>
+                        <img class="deco" src="img/decoration_1.png" />
+                        <a href="#">Oferta de Clases</a>
+                    </div>
+                </div>
+            </div>
+        </div>
 	</footer>
 </body>
 </html>
