--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
                         <a href="#">Oferta de Clases</a>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-6 man">
+                        <img class="deco" src="img/instructor_4.jpg" />
+
+                    </div>
+                    <div class="col-6">
+
+                    </div>
+                </div>
             </div>
         </div>
 	</footer>
