--- a/index.html
+++ b/index.html
@@ -17,47 +17,46 @@
         <div class="container">
             <div class="row">
                 <div id="nav" class="col-12">
-                	<h5 class="text-blue" >ESCUELA DE DANZA</h5>
-                     <ul>
-                         <li><a href="#">Nosotros</a></li>
-                         <li><a href="#">Clases</a></li>
-                         <li><a href="#">Blog</a></li>
-                         <li><a href="#">Contáctanos</a></li>
-                     </ul>
+                	<h5 class="text-center pt-5 pb-5 text-blue" >ESCUELA DE DANZA</h5>
+                     <nav class="text-center pb-5 ">
+                         <a class="a-none-decoration text-gray" href="#">Nosotros</a>
+                         <a class="a-none-decoration text-gray" href="#">Clases</a>
+                         <a class="a-none-decoration text-gray" href="#">Blog</a>
+                         <a class="a-none-decoration text-gray" href="#">Contáctanos</a>
+                     </nav>
                 </div>
             </div>
         </div>
     </header>
-        <div class="dance1">
+        <div class="dance1 w-100">
             <div class="container">
                 <div class="col-3 " >
-                    <h5>STUDIO</h5>
-                    <p>Julliart Studios is the perfect place <br>
+                    <h5 class="text-white">STUDIO</h5>
+                    <p class="text-white">Julliart Studios is the perfect place <br>
                      to find feet with over 20<br>
                      unique styles of dance and 80<br>
                      teachers to choose from</p>
-                     <a href="#">Inscribete</a>
+                     <a class="a-none-decoration text-white" href="#">Inscribete</a>
                 </div>
             </div>
         </div>
 	<footer>
-        <div class="textura2">
+        <div class="textura2 w-100">
             <div class="container">
                 <div class="row">
-                    <div class="col-8 eight " >
-                        <p>Julliart Scuenta con una amplia trayectoria y reputación, brindando
+                    <div class="col-8 eight  " >
+                        <p class="text-center">Julliart Scuenta con una amplia trayectoria y reputación, brindando
                         una formación de excelencia a cientos de amantes de danza</p>
                         <img class="deco" src="img/decoration_1.png" />
-                        <a href="#">Oferta de Clases</a>
+                        <a class="a-none-decoration text-white" href="#">Oferta de Clases</a>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-6 man">
-                        <img class="deco" src="img/instructor_4.jpg" />
-
+                    <div class="col-6 ">
+                        <img class="pt-5" src="img/instructor_4.jpg" />
                     </div>
                     <div class="col-6">
-
+                        <img class="pt-5" src="img/profesor_9.jpg" />
                     </div>
                 </div>
             </div>
